# actix-todo-api

./: .env.example  Cargo.toml  README.md
schemas/: pgsql.sql  sqlite.sql
src/: database.rs  error.rs  main.rs
src/controller/: mod.rs  todos.rs  work_lists.rs
src/forms/: mod.rs  todo.rs  work_list.rs
src/model/: mod.rs  todo.rs  todo_list.rs  work_list.rs
src/web_app/: client.rs  mod.rs  validated_json.rs
