[package]
authors = ["Marcin Grzywaczewski <killavus@gmail.com>"]
edition = "2018"
name = "todo-list-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
maplit = "1.0"
serde = "1.0"
serde_json = "1.0"
sqlx = {git = "https://github.com/launchbadge/sqlx", default-features = true, features = ["sqlite"]}
tokio = {version = "0.2", features = ["full"]}
validator = "0.10"
validator_derive = "0.10"
